add data half end to the match